<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03A9F4"
    tools:context=".EditStat">


    <AutoCompleteTextView
        android:id="@+id/enterStat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="91dp"
        android:layout_marginTop="352dp"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="454dp"
        android:ems="10"
        android:background="@null"
        android:gravity="center"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:hint="@string/stat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- Replace BottomNavigationView with a FrameLayout or LinearLayout -->
    <FrameLayout
        android:id="@+id/nav_stuff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:elevation="4dp"
        android:background="#80000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="4dp"
                android:paddingEnd="40dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_video"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_margin="3dp"
                    android:backgroundTint="#4DFFFFFF"
                    android:text="@string/video"
                    app:cornerRadius="20dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_margin="3dp"
                    android:backgroundTint="#4DFFFFFF"
                    android:text="@string/photo"
                    app:cornerRadius="20dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button7"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_margin="3dp"
                    app:cornerRadius="20dp"
                    android:backgroundTint="#4DFFFFFF"
                    android:text="@string/text" />

            </LinearLayout>
        </HorizontalScrollView>
    </FrameLayout>

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:srcCompat="@drawable/palette" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="Aa"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/iv_close" />

</androidx.constraintlayout.widget.ConstraintLayout>